--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand " href="#">.Bloggers</a>
+      <a class="navbar-brand " href="/blogger/">.Bloggers</a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,13 +25,13 @@
 
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-5">
           <li class="nav-item mx-5">
-            <a class="nav-link active" aria-current="page" href="/">HOME</a>
+            <a class="nav-link active" aria-current="page" href="/blogger/">HOME</a>
           </li>
           <li class="nav-item mx-5">
-            <a class="nav-link" href="/about.html">ABOUT</a>
+            <a class="nav-link" href="/blogger/about.html">ABOUT</a>
           </li>
           <li class="nav-item mx-5">
-            <a class="nav-link" href="/privacy.html">PRIVACY</a>
+            <a class="nav-link" href="/blogger/privacy.html">PRIVACY</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
