--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <!-- nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand " href="/blogger/">.Bloggers</a>
+      <a class="navbar-brand " href="#">.Bloggers</a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,10 +32,10 @@
 
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-5">
           <li class="nav-item mx-5">
-            <a class="nav-link" aria-current="page" href="/blogger/index.html">HOME</a>
+            <a class="nav-link" aria-current="page" href="/blogger/">HOME</a>
           </li>
           <li class="nav-item mx-5">
-            <a class="nav-link active" href="/blogger/">ABOUT</a>
+            <a class="nav-link active" href="/blogger/about.html">ABOUT</a>
           </li>
           <li class="nav-item mx-5">
             <a class="nav-link" href="/blogger/privacy.html">PRIVACY</a>
