--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       </p>
       <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
         data-bs-target="#staticBackdrop">LOGIN</button>
-      <a class="btn btn-outline-success mx-2" href="/form.html" role="button">SIGN-UP</a>
+      <a class="btn btn-outline-success mx-2" href="/blogger/form.html" role="button">SIGN-UP</a>
     </div>
   </div>
   <!-- container end -->
